Page not found, Denied Access and Set info on login including CSS

--- a/mod/css/all.css
+++ b/mod/css/all.css
@@ -8,6 +8,7 @@ normalize*/ article,aside,details,figcaption,figure,footer,header,hgroup,main,na
 	width: 100%;
 	float: left;
 	height: 409px;
+	margin-left: 50px;
 }
 
 .content-header {
