--- a/mod/css/dragdrop.css
+++ b/mod/css/dragdrop.css
@@ -1,5 +1,6 @@
 .dragdrop {
 	min-height:1000px;
+	margin-top: 15px;
 }
 .opt{
 	float: right;
@@ -10,6 +11,16 @@
 	min-height: 937px;
 	height: 80%;
 	padding: 15px;
+	border: #fff;
+}
+.query {  
+	float: right; 
+	width: 50%; 
+	min-height: 937px;
+	height: 80%;
+	padding: 15px;
+	position: relative;
+	border: 1px solid black;
 }
 fieldset {
 	margin-bottom: 10px;
@@ -34,14 +45,6 @@ fieldset {
 	background: white;
 	margin-right: 5px;
 	margin-bottom: 5px;
-}
-.query { 
-	width: 50%; 
-	min-height: 937px;
-	height: 80%;
-	padding: 5px; 
-	float: right; 
-	position: relative;
 }
 .op { 
 	padding: 0.5em; 
@@ -232,7 +235,11 @@ fieldset {
 .nav > li > a > img {
   max-width: none;
 }
-#change_here {
-	min-height: 100px;
-	display: block;
+.submit-query {
+	background: #830000;
+	color: white;
+}
+.submit-query:hover {
+	background: #500000;
+	color: white;
 }
